[tool.poetry]
name = "sse"
version = "0.1.0"
description = ""
authors = ["cvecve147 <cplyuef357@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
albumentations = "1.4.3"
pydantic = "1.10.15"
fastapi = "0.111.1"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
